# pai-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  PERFORMANCE_IMPROVEMENTS.md  README.md  __main__.py  bot.py  docker-compose.yaml  media_commands.json  pai_config.json  pyproject.toml  requirements.txt  take.json
client/: duck_client.py  google_client.py  twitch_client.py
cogs/: commands.py  daily_citation.py  events.py  tasks.py
cogs/ui/: image_paginator.py  subscriptions_paginator.py
config/: config_loader.py  pai_config.json  settings.py  take.json
server/: notification_server.py
src/: __init__.py  bot.py  logger.py
src/clients/generic/: http.py  mdn_client.py
src/clients/image_search/: duck_client.py  google_client.py
src/clients/twitch/: twitch_client.py
src/cogs/: __init__.py  _base.py  daily_quote.py  events.py  misc.py  tasks.py
src/cogs/community/: quotations.py  take.py
src/cogs/ext/: generic.py  twitch.py
src/cogs/media/: image.py  voice.py
src/config/: constants.py  loader.py  take_helper.py
src/server/: __init__.py  discord_sender.py  embed_builder.py  handlers.py  server.py
src/ui/: image_paginator.py  subscriptions_paginator.py
src/utils/: cooldown.py
utils/: cooldown.py  http.py  takes.py
