[project]
name = "pai-bot"
version = "1.0.0"
description = "Discord bot with image and media capabilities"

keywords = ["discord", "bot", "discord.py"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "discord.py~=2.7.1",
    "psutil",
    "python-dotenv~=1.0.1",
    "pydantic-settings~=2.0.0",
    "pydantic~=2.0.0",
    "Pillow",
    "aiohttp~=3.13.4",
    "requests~=2.33.0",
    "PyNaCl>=1.6.2",
    "ddgs",
    "davey",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.250",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["config/*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # diretórios
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-report=term"


